--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -97,3 +97,14 @@ main {
 	margin-top: var(--margin-sm);
 	margin-right: var(--margin-sm);
 }
+
+
+
+
+
+
+
+#basket{
+	width: 200px;
+	height: 200px;
+}
