--- a/assets/styles/menu.css
+++ b/assets/styles/menu.css
@@ -50,6 +50,34 @@ body {
 	flex: 1;
 }
 
+#header-basket {
+	text-align: right;
+	margin-left: auto;
+	width: 100%;
+	padding-right: 4rem;
+}
+
+#basketSymbol {
+	width: 100%;
+}
+
+#basketSymbol i {
+	font-size: 28px;
+	display: inline-block;
+	cursor: pointer;
+}
+
+#totalProducts {
+	display: inline-block;
+}
+
+#basket {
+	border: solid 1px black;
+	width: 30%;
+	margin-left: 70%;
+	display: none;
+}
+
 header {
 	display: inline-flex;
 	height: 15rem;
@@ -98,9 +126,21 @@ main {
 	margin-top: 2rem;
 }
 
+#topHeader {
+	width: 100%;
+	height: 4rem;
+	background: #f7e7e4;
+}
+
 .language-selection {
+	margin-left: 85%;
+	width: 15%;
+	margin-bottom: 2rem;
+}
+
+.language-selection a {
 	text-align: right;
-	margin-left: auto;
-	margin-top: var(--margin-sm);
-	margin-right: var(--margin-sm);
+	font-size: 15px;
+	color: black;
+	text-decoration: none;
 }
